--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </label>
         </div>
 
-        <div class="input">
+        <section class="input">
             <input type="password" name="password" id="password" required>
             <label for="password">
                 Password
             </label>
-        </div>
+        </section>
     </div>
     <a href="#" class="forget-pass-link">Forgot password?</a>
     <button>Sign in</button>
